fixed minor alignment changes

--- a/css/style.css
+++ b/css/style.css
@@ -295,7 +295,7 @@ section.active {
 
 .home-img .img-box .img-item img {
     position: absolute;
-    /* top: 1rem; */
+    /* top: 2rem; */
     display: block;
     width: 100%;
     height: 100%;
@@ -387,6 +387,14 @@ section.active {
     display: grid;
     grid-template-columns: 1fr 2fr;
     gap: 5rem;
+}
+
+.resume-container > .resume-box:first-child {
+  flex: 0 0 40%; 
+}
+
+.resume-container > .resume-box:last-child {
+  flex: 0 0 60%; 
 }
 
 .resume-box h2 {
@@ -541,7 +549,7 @@ section.active {
 
 .resume-detail.about .resume-list {
     height: auto;
-    grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
 }
 
 
@@ -553,6 +561,10 @@ section.active {
 
 .resume-detail.about .resume-item p {
     color: var(--main-color);
+}
+
+.resume-detail.about .desc {
+    font-size: 1.2rem;
 }
 
 .resume-detail.about .resume-item p span {
